src/tests/testfiles/variable-declarations/10.txt
Error at 16:5: Incompatible types when assigning to type 'char *' from type 'char'
h = 'n'; //error
^
